--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,18 +1,19 @@
 @charset "utf-8";
 /* CSS Document */
 
-#background {
-	width: ;
-	height: ;
-	position: ;
-	left: ;
-	top: ;
-	z-index: ;
+body {
 	
 }
 
-.stretch {
-	width: ;
-	height: ;
+#header {
+	
+}
+
+#content {
+	
+	
+}
+
+#footer {
 	
 }
